force-app/main/default/objects/Temp_Case__c/Temp_Case__c.object-meta.xml
<CustomObject>
    <label>Temp Case</label>
    <nameField>
        <label>Temp Case名稱</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>