force-app/main/default/objects/Temp_Case__c/fields/Booking_Reference_PNR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_PNR__c</fullName>
    <label>Booking_Reference_PNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>