force-app/main/default/objects/Temp_Case__c/fields/Chatbot_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_CustomerType__c</fullName>
    <label>Chatbot_CustomerType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>type1</fullName>
            </value>
            <value>
                <fullName>type2</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>