force-app/main/default/objects/Temp_Case__c/fields/Chatbot_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_ID__c</fullName>
    <label>Chatbot_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>