force-app/main/default/objects/Temp_Case__c/fields/Chatbot_Mail__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Mail__c</fullName>
    <label>Chatbot_Mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>