force-app/main/default/objects/Temp_Case__c/fields/Chatbot_Name__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Name__c</fullName>
    <label>Chatbot_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>