force-app/main/default/objects/Temp_Case__c/fields/Chatbot_OnlineSupport__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_OnlineSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chatbot_OnlineSupport</label>
    <type>Checkbox</type>
</CustomField>