force-app/main/default/objects/Temp_Case__c/fields/Chatbot_UID__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_UID__c</fullName>
    <label>Chatbot_UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>