force-app/main/default/objects/Temp_Case__c/fields/Has_Been_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Been Assigned</label>
    <type>Checkbox</type>
</CustomField>