force-app/main/default/objects/Temp_Case__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>