force-app/main/default/objects/Temp_Case__c/fields/Terminated__c.field-meta.xml
<CustomField>
    <fullName>Terminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terminated</label>
    <type>Checkbox</type>
</CustomField>