force-app/main/default/objects/Temp_Case__c/fields/Ticket_EMD_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_EMD_Number__c</fullName>
    <label>Ticket_EMD_Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>