force-app/main/default/objects/Temp_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Passenger_Name__c</columns>
    <columns>Chatbot_Language__c</columns>
    <columns>Has_Been_Assigned__c</columns>
    <columns>Terminated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Chatbot_CustomerType__c</columns>
    <columns>Chatbot_UID__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>