force-app/main/default/objects/Temp_Case__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Passenger_Name__c</columns>
    <columns>Chatbot_Language__c</columns>
    <columns>Has_Been_Assigned__c</columns>
    <columns>Terminated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Chatbot_UID__c</columns>
    <columns>Chatbot_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>